# ansicolorslib

./: .gitignore  README.md  setup.cfg  setup.py
src/ansicolorslib/: __init__.py  ansicolorslib.py
