[metadata]
name = ansicolorslib-Raz_Kissos
version = 1.0.2
author = Raz Kissos
author_email = kissosrazz@gmail.com
description = A small library containing ansi color functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RazKissos/ansicolorslib
project_urls = https://github.com/RazKissos/ansicolorslib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src